--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.3.1"
   },
   "dependencies": {
-    "ngstorage": "^0.3.11"
+    "ngstorage": "^0.3.11",
+    "angular-sanitize": "^1.5.8"
   }
 }
